tests/compile_fail/invalid_layout_value_newtype_literal.rs
use surgeist_style::{AspectRatio, FlexFactor, Order};

fn main() {
    let _order = Order(1);
    let _grow = FlexFactor(1.0);
    let _ratio = AspectRatio(0.0);
}
