tests/compile_fail/invalid_layout_value_newtype_literal.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_layout_value_newtype_literal.rs:4:18
  |
4 |     let _order = Order(1);
  |                  ^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct Order(i32);
  |                  ^^^ private field
help: you might have meant to use the `new` associated function
  |
4 |     let _order = Order::new(1);
  |                       +++++

error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_layout_value_newtype_literal.rs:5:17
  |
5 |     let _grow = FlexFactor(1.0);
  |                 ^^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct FlexFactor(f32);
  |                       ^^^ private field
help: you might have meant to use an associated function to build this type
  |
5 -     let _grow = FlexFactor(1.0);
5 +     let _grow = FlexFactor::zero();
  |
5 -     let _grow = FlexFactor(1.0);
5 +     let _grow = FlexFactor::one();
  |

error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_layout_value_newtype_literal.rs:6:18
  |
6 |     let _ratio = AspectRatio(0.0);
  |                  ^^^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct AspectRatio(AspectRatioKind);
  |                        ^^^^^^^^^^^^^^^ private field
